# battery-market-intelligence

./: .env.example  .gitignore  README.md  pyproject.toml
battery_strategy/: __init__.py  balance.py  chunking.py  cli.py  embedding.py  graph.py  index_store.py  llm.py  pdf_loader.py  pipeline.py  planning.py  postprocess.py  prompts.py  retrieval.py  runtime.py  settings.py  utils.py  web_search.py
battery_strategy/agents/: __init__.py  bias_audit.py  company.py  comparison.py  market.py  postprocess.py  runtime.py  supervisor.py  writer.py
battery_strategy/rag/: __init__.py  chunking.py  embedding.py  index_store.py  pdf_loader.py  retrieval.py
battery_strategy/tools/: __init__.py  balance.py  llm.py  planning.py  prompts.py  web_search.py
battery_strategy/utils/: __init__.py  logging.py  settings.py  types.py
configs/: data_manifest.yaml  runtime.example.yaml
tests/: test_smoke.py
