[project]
name = "battery-strategy-multi-agent"
version = "0.1.0"
description = "Supervisor-based multi-agent battery strategy analysis pipeline for LG Energy Solution vs CATL"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "ddgs>=9.0.0",
  "faiss-cpu>=1.8.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "openai>=1.0.0",
  "pypdf>=5.0.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "rank-bm25>=0.2.2",
  "rich>=13.7.0",
  "sentence-transformers>=3.0.0",
  "tenacity>=8.4.0",
  "trafilatura>=1.9.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
rerank = [
  "FlagEmbedding>=1.3.4",
]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[project.scripts]
battery-strategy = "battery_strategy.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["battery_strategy"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
